# chess2

./: .gitignore  README.md  chess.ipynb  pyproject.toml
examples/: debug_game.py
src/chess2/: __init__.py  board.py  enums.py  game.py  gui.py  move.py  players.py
src/chess2/bot/: __init__.py  create_trainingset.py  dataset.py  dataset_filter.py  move_generation.py  neural_network.py  tensor_processor.py  training.ipynb  training.py  unpack_leela.py
src/chess2/gui/: __init__.py  board_renderer.py  button.py  button_renderer.py  end_screen.py  event_handler.py  game_loop.py  gui.py  pieces_renderer.py  start_screen.py  window.py
src/chess2/pieces/: __init__.py  base.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
