[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess2"
version = "0.1.0"
description = "A Python chess engine with rule implementation and game logic."
authors = [
    { name = "Jonas Kuch", email = "jonas.a.kuch@gmail.com" }
]
readme = "README.md"
license = { text = " ... " }
requires-python = ">=3.8"

dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]